Работа над ошибками

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -255,13 +255,14 @@
     </div>
     <h3 class="add-title">Дополнительные товары</h3>
     <div class="goods-wrapper">
+
       <section class="add-goods">
 
         <ul class="add-goods__list">
           <li class="add-article">
             <h4 class="add-article__title">Сахарозаменитель</h4>
             <table class="add-article__table">
-              <tr>
+              <tr class="add-article__line">
                 <td class="add-article__item">1 упаковка (100 г)</td>
                 <td class="add-article__item">200 р.</td>
               </tr>
@@ -272,7 +273,7 @@
           <li class="add-article">
             <h4 class="add-article__title">Питьевая вода</h4>
             <table class="add-article__table">
-              <tr>
+              <tr class="add-article__line">
                 <td class="add-article__item">5 литров</td>
                 <td class="add-article__item">50 р.</td>
               </tr>
@@ -283,7 +284,7 @@
           <li class="add-article">
             <h4 class="add-article__title">Молоко</h4>
             <table class="add-article__table">
-              <tr>
+              <tr class="add-article__line">
                 <td class="add-article__item">1 литр</td>
                 <td class="add-article__item">100 р.</td>
               </tr>
@@ -294,7 +295,7 @@
           <li class="add-article">
             <h4 class="add-article__title">Витамины</h4>
             <table class="add-article__table">
-              <tr>
+              <tr class="add-article__line">
                 <td class="add-article__item">1 упаковка (30 г)</td>
                 <td class="add-article__item">300 р.</td>
               </tr>
@@ -315,7 +316,7 @@
   </main>
   <footer class="footer">
     <section class="welcome">
-      <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
+      <p class="welcome__partnership">Приглашаем <br> к сотрудничеству диллеров!</p>
       <p class="welcome__address">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
