--- a/source/form.html
+++ b/source/form.html
@@ -77,16 +77,19 @@
         </fieldset>
       </div>
       <fieldset class="owner-data container">
-        <h2 class="program-form__head program-form__head--decoration owner-data__head">Контактные данные (владельца кота)</h2>
+        <h2 class="program-form__head program-form__head--decoration owner-data__head">Контактные данные (владельца
+          кота)</h2>
         <div class="owner-data__wrapper container">
           <p class="owner-data__mail">
             <label for="mail" class="program-form__data">e-mail:*</label>
-            <input class="owner-data__name" type="email" id="mail" name="owner-mail" placeholder="kuklachev@gmail.com" required>
+            <input class="owner-data__name" type="email" id="mail" name="owner-mail" placeholder="kuklachev@gmail.com"
+              required>
             <!--картинка-->
           </p>
           <p class="owner-data__phone">
             <label for="phone" class="program-form__data">Телефон:*</label>
-            <input class="owner-data__name" type="tel" id="phone" name="owner-phone" placeholder="8 (960) 900-60-90" required>
+            <input class="owner-data__name" type="tel" id="phone" name="owner-phone" placeholder="8 (960) 900-60-90"
+              required>
             <!--картинка-->
           </p>
         </div>
@@ -102,19 +105,19 @@
         <h2 class="program-form__head cat-addition__head program-form__head--decoration">Дополнительно</h2>
         <div class="cat-addition__wrapper container">
           <div class="cat-addition__item">
-            <input type="checkbox" id="sugar" name="add-sugar" checked class="cat-addition__check">
+            <input type="checkbox" id="sugar" name="add-sugar" checked class="visually-hidden">
             <label for="sugar" class="cat-addition__label program-form__data ">Сахарозаменитель</label>
           </div>
           <div class="cat-addition__item">
-            <input type="checkbox" id="water" name="add-water" class="cat-addition__check">
+            <input type="checkbox" id="water" name="add-water" class="visually-hidden">
             <label for="water" class="cat-addition__label program-form__data">Питьевая вода</label>
           </div>
           <div class="cat-addition__item">
-            <input type="checkbox" id="milk" name="add-milk" class="cat-addition__check">
+            <input type="checkbox" id="milk" name="add-milk" class="visually-hidden">
             <label for="milk" class="cat-addition__label program-form__data">Молоко</label>
           </div>
           <div class="cat-addition__item">
-            <input type="checkbox" id="vitamin" name="add-vitamin" class="cat-addition__check">
+            <input type="checkbox" id="vitamin" name="add-vitamin" class="visually-hidden">
             <label for="vitamin" class="cat-addition__label program-form__data">Витамины</label>
           </div>
         </div>
