--- a/source/catalog.html
+++ b/source/catalog.html
@@ -316,8 +316,8 @@
   </main>
   <footer class="footer">
     <section class="welcome">
-      <p class="welcome__partnership">Приглашаем <br> к сотрудничеству диллеров!</p>
-      <p class="welcome__address">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="welcome__partnership">Приглашаем <br> к сотрудничеству дилеров!</p>
+      <p class="welcome__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
     <section class="footer__info">
