--- a/source/index.html
+++ b/source/index.html
@@ -157,7 +157,8 @@
   <footer class="footer">
     <section class="welcome">
       <p class="welcome__partnership">Приглашаем <br> к сотрудничеству <br> дилеров!</p>
-      <p class="welcome__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="welcome__address">ул. Большая Конюшенная, д. 19/8 <span
+          class="welcome__address-spb">Санкт-Петербург</span></p>
     </section>
     <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
     <section class="footer__info">
