Начинаем добавлять адаптивную графику

--- a/source/form.html
+++ b/source/form.html
@@ -13,8 +13,12 @@
 
     <div class="header__wrapper">
       <a href="index.html" class="header__logo">
-        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-          alt="Здоровое питание для кошек «CAT ENERGY»">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+            alt="Здоровое питание для кошек «CAT ENERGY»">
+        </picture>
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger  burger--no-js">
@@ -77,9 +81,11 @@
           </div>
         </fieldset>
       </div>
-      <h2 class="program-form__head program-form__head--decoration program-form__head--owner">Контактные данные
-        (владельца
-        кота)</h2>
+      <div class="program-form__line-head">
+        <h2 class="program-form__head program-form__head--decoration program-form__head--owner"><span
+            class="program-form__line">Контактные данные
+            (владельца кота)</span></h2>
+      </div>
       <fieldset class="owner-data">
 
         <div class="owner-data__wrapper">
@@ -97,16 +103,17 @@
           </p>
         </div>
       </fieldset>
-      <label for="about"
-        class="program-form__head program-form__head--decoration program-form__head--cat">Комментарий</label>
+      <div class="program-form__line-head">
+        <label for="about" class="program-form__head program-form__head--decoration program-form__head--cat"><span class="program-form__line">Комментарий</span></label>
+      </div>
       <fieldset class="cat-info container">
-
-
         <textarea id="about" name="about-cat" rows="5" class="program-form__data program-form__data--about-cat">расскажите обо всех повадках кота
           </textarea>
-
       </fieldset>
-      <h2 class="program-form__head program-form__head--addition program-form__head--decoration">Дополнительно</h2>
+      <div class="program-form__line-head">
+        <h2 class="program-form__head program-form__head--addition program-form__head--decoration"><span
+            class="program-form__line">Дополнительно</span></h2>
+      </div>
       <fieldset class="cat-addition">
 
         <div class="cat-addition__wrapper container">
@@ -172,6 +179,7 @@
     </section>
 
   </footer>
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
