--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,12 @@
 
     <div class="header__wrapper">
       <a href="index.html" class="header__logo">
-        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-          alt="Здоровое питание для кошек «CAT ENERGY»">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+            alt="Здоровое питание для кошек «CAT ENERGY»">
+        </picture>
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger  burger--no-js">
@@ -44,7 +48,14 @@
         <!--№1-->
         <li class="catalog__item">
           <a href="/page1">
-            <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус курицы" src="img/chicken-small-mobile@1x.jpg">
+            <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+              <img class="catalog__item-img catalog__item-img--small" alt="Cat Energy PRO 500 г вкус курицы"
+                src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.png 2x">
+            </picture>
           </a>
           <div class="catalog__wrapper">
             <a href="/page1">
@@ -72,7 +83,14 @@
         <!--№2-->
         <li class="catalog__item">
           <a href="/page2">
-            <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус курицы" src="img/chicken-big-mobile@1x.jpg">
+            <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
+              <img class="catalog__item-img catalog__item-img--big" alt="Cat Energy PRO 1000 г вкус курицы"
+                src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x">
+            </picture>
           </a>
           <div class="catalog__wrapper">
             <a href="/page2">
@@ -101,7 +119,13 @@
         <!--№3-->
         <li class="catalog__item">
           <a href="/page3">
-            <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус рыбы" src="img/fish-small-mobile@1x.jpg">
+            <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
+              <img class="catalog__item-img catalog__item-img--small" alt="Cat Energy PRO 500 г вкус рыбы"
+                src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x">
+            </picture>
           </a>
           <div class="catalog__wrapper">
             <a href="/page3">
@@ -130,7 +154,12 @@
         <!--№4-->
         <li class="catalog__item">
           <a href="/page4">
-            <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус рыбы" src="img/fish-big-mobile@1x.jpg">
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+              <img class="catalog__item-img catalog__item-img--big" alt="Cat Energy PRO 1000 г вкус рыбы"
+                src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x">
+            </picture>
           </a>
           <div class="catalog__wrapper">
             <a href="/page4">
@@ -159,8 +188,14 @@
         <!--№5-->
         <li class="catalog__item">
           <a href="/page5">
-            <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус гречки"
-              src="img/buckwheat-small-mobile@1x.jpg">
+            <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+              <img class="catalog__item-img catalog__item-img--small" alt="Cat Energy Slim 500 г вкус гречки"
+                src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x">
+            </picture>
           </a>
           <div class="catalog__wrapper">
             <a href="/page5">
@@ -189,8 +224,14 @@
         <!--№6-->
         <li class="catalog__item">
           <a href="/page6">
-            <img class="catalog__item-img" alt="Cat Energy Slim 1000 г вкус гречки"
-              src="img/buckwheat-big-mobile@1x.jpg">
+            <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
+              <img class="catalog__item-img catalog__item-img--big" alt="Cat Energy Slim 1000 г вкус гречки"
+                src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x">
+            </picture>
           </a>
           <div class="catalog__wrapper">
             <a href="/page6">
@@ -219,8 +260,15 @@
         <!--№7-->
         <li class="catalog__item">
           <a href="/page7">
-            <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус риса" src="img/rice-small-mobile@1x.jpg">
+            <picture>
+              <source media="(min-width: 1300px)"
+                srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+              <img class="catalog__item-img catalog__item-img--small" alt="Cat Energy Slim 500 г вкус риса"
+                src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x">
+            </picture>
           </a>
+
           <div class="catalog__wrapper">
             <a href="/page7">
               <h2 class="catalog__head">
@@ -351,6 +399,7 @@
     </section>
 
   </footer>
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
