--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,12 @@
 
     <div class="header__wrapper">
       <a class="header__logo">
-        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-          alt="Здоровое питание для кошек «CAT ENERGY»">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+            alt="Здоровое питание для кошек «CAT ENERGY»">
+        </picture>
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger  burger--no-js">
@@ -42,7 +46,12 @@
         <div class="introduce__container">
           <h1 class="introduce__head">Функциональное питание для котов</h1>
           <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ? ЗАЙМИСЬ КОТОМ!</p>
-          <img class="introduce__img" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Банка с кормом">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
+            <img class="introduce__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
+              alt="Банка с кормом">
+          </picture>
           <a href="form.html" class="button introduce__button">ПОДОБРАТЬ ПРОГРАММУ</a>
         </div>
       </section>
@@ -189,9 +198,8 @@
         </div>
       </div>
     </section>
-
   </footer>
-
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
