--- a/source/index.html
+++ b/source/index.html
@@ -199,7 +199,7 @@
       </div>
     </section>
   </footer>
-  <script src="js/picturefill.min.js"></script>
+  <script src="js/picturefill.js"></script>
 </body>
 
 </html>
