--- a/source/catalog.html
+++ b/source/catalog.html
@@ -368,7 +368,12 @@
       <p class="welcome__address">ул. Большая Конюшенная, д. 19/8 <span
           class="welcome__address-spb">Санкт-Петербург</span></p>
     </section>
-    <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
+    <picture>
+      <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+      <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400"
+        srcset="img/bg-map-mobile@2x.png 2x" alt="«CAT ENERGY»">
+    </picture>
     <section class="footer__info">
       <div class="footer__container container">
         <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
