--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
     <ul class="program-choice">
       <li class="program-choice__item">
         <div class="program-choice__wrapper">
-          <div class="program-choice__section">
+          <div class="program-choice__section program-choice__section--slim">
             <div class="program-choice__icon"></div>
             <!--Картинка-иконка-->
             <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
@@ -73,7 +73,7 @@
       </li>
       <li class="program-choice__item">
         <div class="program-choice__wrapper">
-          <div class="program-choice__section">
+          <div class="program-choice__section program-choice__section--pro">
             <div class="program-choice__icon"></div>
             <!--Картинка-иконка-->
             <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
@@ -90,28 +90,28 @@
     <section class="works container">
       <h2 class="works__head">Как это работает</h2>
       <ul class="works__list">
-        <li class="works__item works__item--benefit">
+        <li class="works__item works__item--benefit works__item--benefit">
 
           <!--Картинка-иконка-->
           <p class="works__info">
             Функциональное питание содержит только полезные питательные вещества.
           </p>
         </li>
-        <li class="works__item works__item--easy">
+        <li class="works__item works__item--easy works__item--easy">
 
           <!--Картинка-иконка-->
           <p class="works__info">
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
         </li>
-        <li class="works__item works__item--econom">
+        <li class="works__item works__item--econom works__item--econom">
 
           <!--Картинка-иконка-->
           <p class="works__info">
             Замените один-два приема обычной еды на наше функциональное питание.
           </p>
         </li>
-        <li class="works__item works__item--better">
+        <li class="works__item works__item--better works__item--better">
 
           <!--Картинка-иконка-->
           <p class="works__info">
@@ -146,7 +146,12 @@
           <p class="example__cost">затраты на питание: <span class="example__cost-span">15 000 руб.</span></p>
         </div>
         <div>
-          <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232" alt="Жирный кот">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
+            <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232"
+              srcset="img/before-mobile@2x.png 2x" alt="Жирный кот">
+          </picture>
           <div class="example__indicator">
             <div>
               <label class="example__cat example__cat--was" for="was">БЫЛО</label>
@@ -169,7 +174,12 @@
       <p class="welcome__address">ул. Большая Конюшенная, д. 19/8 <span
           class="welcome__address-spb">Санкт-Петербург</span></p>
     </section>
-    <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
+    <picture>
+      <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+      <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400"
+        srcset="img/bg-map-mobile@2x.png 2x" alt="«CAT ENERGY»">
+    </picture>
     <section class="footer__info">
       <div class="footer__container container">
         <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
