--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,7 +54,7 @@
               <source media="(min-width: 768px)"
                 srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
               <img class="catalog__item-img catalog__item-img--small" alt="Cat Energy PRO 500 г вкус курицы"
-                src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.png 2x">
+                src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x">
             </picture>
           </a>
           <div class="catalog__wrapper">
