--- a/source/index.html
+++ b/source/index.html
@@ -90,28 +90,28 @@
     <section class="works container">
       <h2 class="works__head">Как это работает</h2>
       <ul class="works__list">
-        <li class="works__item works__item--benefit works__item--benefit">
+        <li class="works__item works__item--benefit">
 
           <!--Картинка-иконка-->
           <p class="works__info">
             Функциональное питание содержит только полезные питательные вещества.
           </p>
         </li>
-        <li class="works__item works__item--easy works__item--easy">
+        <li class="works__item works__item--easy">
 
           <!--Картинка-иконка-->
           <p class="works__info">
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
         </li>
-        <li class="works__item works__item--econom works__item--econom">
+        <li class="works__item works__item--econom">
 
           <!--Картинка-иконка-->
           <p class="works__info">
             Замените один-два приема обычной еды на наше функциональное питание.
           </p>
         </li>
-        <li class="works__item works__item--better works__item--better">
+        <li class="works__item works__item--better">
 
           <!--Картинка-иконка-->
           <p class="works__info">
