Работа над ошибками

--- a/source/form.html
+++ b/source/form.html
@@ -126,18 +126,17 @@
         <fieldset class="cat-data">
           <div class="cat-data__wrapper">
             <label for="cat-name" class="cat-data__label">Имя:*</label>
-            <input type="text" id="cat-name" name="name" placeholder="Барсик" pattern="^[А-Яа-яЁё\s]+$" required
+            <input type="text" id="cat-name" name="name" placeholder="Барсик" required
               class="cat-data__name program-form__check">
           </div>
           <div class="cat-data__wrapper">
             <label for="cat-weight" class="cat-data__label">Вес (кг):*</label>
-            <input type="text" id="cat-weight" name="weight" placeholder="7" pattern="[0-9]{,3}" required
+            <input type="text" id="cat-weight" name="weight" placeholder="7" required
               class="cat-data__name program-form__check">
           </div>
           <div class="cat-data__wrapper">
             <label for="cat-age" class="cat-data__label">Возраст (лет):</label>
-            <input type="text" id="cat-age" name="age" placeholder="7" pattern="[0-9]{,3}"
-              class="cat-data__name program-form__check">
+            <input type="text" id="cat-age" name="age" placeholder="7" class="cat-data__name program-form__check">
           </div>
         </fieldset>
         <fieldset class="cat-aspiration ">
@@ -258,21 +257,21 @@
         <ul class="footer__smm-list smm-list">
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Vkontakte">
-              <svg width="30" height="16">
+              <svg class="smm-list__icon-vk">
                 <use xlink:href="#vk"></use>
               </svg>
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Instagram">
-              <svg width="23" height="23">
+              <svg class="smm-list__icon-inst">
                 <use xlink:href="#inst"></use>
               </svg>
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Facebook">
-              <svg width="14" height="28">
+              <svg class="smm-list__icon-fb">
                 <use xlink:href="#fb"></use>
               </svg>
             </a>
