--- a/source/index.html
+++ b/source/index.html
@@ -180,15 +180,15 @@
         <li class="works__item works__item--better">
 
           <!--Картинка-иконка-->
-          <p class="works__info">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          <p class="works__info works__info--last">
+            Уже через месяц наслаждайтесь изменениями к лучшему <span class="works__info-pet">вашего питомца !</span>
           </p>
         </li>
       </ul>
     </section>
     <section class="example">
       <div class="example__wrapper container">
-        <div>
+        <div class="example__live">
           <h2 class="example__title">Живой пример</h2>
           <article class="example__text">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
@@ -227,7 +227,7 @@
           <div class="example__indicator">
 
             <button class="example__cat example__cat--was" type="button">БЫЛО</button>
-
+            <button class="example__point" type="button"></button>
             <!--Тут будет индикатор-->
 
             <button class="example__cat example__cat--is" type="button">СТАЛО</button>
@@ -272,21 +272,21 @@
         <ul class="footer__smm-list smm-list">
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Vkontakte">
-              <svg width="30" height="16">
+              <svg class="smm-list__icon-vk">
                 <use xlink:href="#vk"></use>
               </svg>
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Instagram">
-              <svg width="23" height="23">
+              <svg class="smm-list__icon-inst">
                 <use xlink:href="#inst"></use>
               </svg>
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Facebook">
-              <svg width="14" height="28">
+              <svg class="smm-list__icon-fb">
                 <use xlink:href="#fb"></use>
               </svg>
             </a>
