--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,9 +50,9 @@
     </symbol>
 
     <symbol viewBox="0 0 10 19" id="fb">
-      <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
-    h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
-    z" />
+      <path
+        d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+    h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18z" />
     </symbol>
     <symbol viewBox="0 0 22 12" id="vk">
       <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
@@ -110,10 +110,10 @@
           <a href="/page1">
             <picture>
               <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/chicken-small-desktop@1x.webp, img/chicken-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/chicken-small-tablet@1x.webp, img/chicken-small-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp, img/chicken-small-mobile@2x.webp 2x">
+                srcset="img/chicken-small-desktop@1x.webp, img/chicken-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/chicken-small-tablet@1x.webp, img/chicken-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/chicken-small-mobile@1x.webp, img/chicken-small-mobile@2x.webp 2x">
 
               <source media="(min-width: 1300px)"
                 srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
@@ -151,10 +151,10 @@
           <a href="/page2">
             <picture>
               <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/chicken-big-desktop@1x.webp, img/chicken-big-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/chicken-big-tablet@1x.webp, img/chicken-big-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp, img/chicken-big-mobile@2x.webp 2x">
+                srcset="img/chicken-big-desktop@1x.webp, img/chicken-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/chicken-big-tablet@1x.webp, img/chicken-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp, img/chicken-big-mobile@2x.webp 2x">
 
               <source media="(min-width: 1300px)"
                 srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
@@ -193,10 +193,10 @@
           <a href="/page3">
             <picture>
               <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/fish-small-desktop@1x.webp, img/fish-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/fish-small-tablet@1x.webp, img/fish-small-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/fish-small-mobile@1x.webp, img/fish-small-mobile@2x.webp 2x">
+                srcset="img/fish-small-desktop@1x.webp, img/fish-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/fish-small-tablet@1x.webp, img/fish-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/fish-small-mobile@1x.webp, img/fish-small-mobile@2x.webp 2x">
 
               <source media="(min-width: 1300px)"
                 srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
@@ -234,10 +234,10 @@
           <a href="/page4">
             <picture>
               <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/fish-big-desktop@1x.webp, img/fish-big-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/fish-big-tablet@1x.webp, img/fish-big-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/fish-big-mobile@1x.webp, img/fish-big-mobile@2x.webp 2x">
+                srcset="img/fish-big-desktop@1x.webp, img/fish-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/fish-big-tablet@1x.webp, img/fish-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/fish-big-mobile@1x.webp, img/fish-big-mobile@2x.webp 2x">
 
               <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
@@ -274,10 +274,11 @@
           <a href="/page5">
             <picture>
               <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/buckwheat-small-desktop@1x.webp, img/buckwheat-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/buckwheat-small-tablet@1x.webp, img/buckwheat-small-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/buckwheat-small-mobile@1x.webp, img/buckwheat-small-mobile@2x.webp 2x">
+                srcset="img/buckwheat-small-desktop@1x.webp, img/buckwheat-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/buckwheat-small-tablet@1x.webp, img/buckwheat-small-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="img/buckwheat-small-mobile@1x.webp, img/buckwheat-small-mobile@2x.webp 2x">
 
 
               <source media="(min-width: 1300px)"
@@ -317,10 +318,10 @@
           <a href="/page6">
             <picture>
               <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/buckwheat-big-desktop@1x.webp, img/buckwheat-big-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/buckwheat-big-tablet@1x.webp, img/buckwheat-big-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp, img/buckwheat-big-mobile@2x.webp 2x">
+                srcset="img/buckwheat-big-desktop@1x.webp, img/buckwheat-big-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/buckwheat-big-tablet@1x.webp, img/buckwheat-big-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/buckwheat-big-mobile@1x.webp, img/buckwheat-big-mobile@2x.webp 2x">
 
 
               <source media="(min-width: 1300px)"
@@ -360,10 +361,10 @@
           <a href="/page7">
             <picture>
               <source type="image/webp" media="(min-width: 1300px)"
-              srcset="img/rice-small-desktop@1x.webp, img/rice-small-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/rice-small-tablet@1x.webp, img/rice-small-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/rice-small-mobile@1x.webp, img/rice-small-mobile@2x.webp 2x">
+                srcset="img/rice-small-desktop@1x.webp, img/rice-small-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/rice-small-tablet@1x.webp, img/rice-small-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/rice-small-mobile@1x.webp, img/rice-small-mobile@2x.webp 2x">
 
               <source media="(min-width: 1300px)"
                 srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
@@ -405,7 +406,9 @@
         </li>
       </ul>
     </div>
-    <h3 class="add-title">Дополнительные товары</h3>
+    <div class="add-title">
+      <h3 class="add-title__h"><span class="add-title__line">Дополнительные товары</span></h3>
+    </div>
     <div class="goods-wrapper">
 
       <section class="add-goods">
@@ -500,21 +503,21 @@
         <ul class="footer__smm-list smm-list">
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Vkontakte">
-              <svg width="30" height="16">
+              <svg class="smm-list__icon-vk">
                 <use xlink:href="#vk"></use>
               </svg>
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Instagram">
-              <svg width="23" height="23">
+              <svg class="smm-list__icon-inst">
                 <use xlink:href="#inst"></use>
               </svg>
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#" class="smm-list__icon" aria-label="Facebook">
-              <svg width="14" height="28">
+              <svg class="smm-list__icon-fb">
                 <use xlink:href="#fb"></use>
               </svg>
             </a>
