--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
-  <link href="build/css/style.min" rel="stylesheet">
+  <link href="../build/css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
