--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <div style="display:none"><include src="build/img/sprite.svg"></include></div>
+  <div style="display:none">
+    <include src="build/img/sprite.svg"></include>
+  </div>
   <header class="header">
 
     <div class="header__wrapper">
@@ -411,11 +413,14 @@
 
   </main>
   <footer class="footer">
-    <section class="welcome">
-      <p class="welcome__partnership">Приглашаем <br> к сотрудничеству <br> дилеров!</p>
-      <p class="welcome__address">ул. Большая Конюшенная, д. 19/8 <span
-          class="welcome__address-spb">Санкт-Петербург</span></p>
-    </section>
+    <div class="footer__welcome container">
+      <section class="welcome">
+        <p class="welcome__partnership">Приглашаем <br> к сотрудничеству <br> дилеров!</p>
+        <p class="welcome__address">ул. Большая Конюшенная, д. 19/8
+          <span class="welcome__address-spb">Санкт-Петербург</span>
+        </p>
+      </section>
+    </div>
     <div class="footer__iframe">
       <iframe class="footer__map"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5999003856373!2d30.32162046314762!3d59.93878097405047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1578492537261!5m2!1sru!2sru"
