Подгоняем под ПП

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -413,8 +413,8 @@
 
   </main>
   <footer class="footer">
-    <div class="footer__welcome container">
-      <section class="welcome">
+    <div class="footer__welcome">
+      <section class="welcome welcome__catalog">
         <p class="welcome__partnership">Приглашаем <br> к сотрудничеству <br> дилеров!</p>
         <p class="welcome__address">ул. Большая Конюшенная, д. 19/8
           <span class="welcome__address-spb">Санкт-Петербург</span>
