--- a/source/form.html
+++ b/source/form.html
@@ -101,7 +101,7 @@
             <svg class="owner-data__icon" width="18" height="14">
               <use xlink:href="#icon-mail"></use>
             </svg>
-            <!--картинка-->
+
           </p>
           <p class="owner-data__phone">
             <label for="phone1" class="program-form__data owner-data__info">Телефон:*</label>
@@ -110,7 +110,7 @@
             <svg class="owner-data__icon" width="21" height="21">
               <use xlink:href="#icon-phone"></use>
             </svg>
-            <!--картинка-->
+
           </p>
         </div>
       </fieldset>
@@ -156,7 +156,7 @@
 
   </main>
   <footer class="footer">
-    <div class="footer__welcome container">
+    <div class="footer__welcome">
       <section class="welcome">
         <p class="welcome__partnership">Приглашаем <br> к сотрудничеству <br> дилеров!</p>
         <p class="welcome__address">ул. Большая Конюшенная, д. 19/8
@@ -179,7 +179,7 @@
 
       <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
       <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
-      <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="390"
+      <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="380"
         srcset="img/bg-map-mobile@2x.png 2x" alt="«CAT ENERGY»">
     </picture>
     <section class="footer__info">
