--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,7 @@
         <div class="program-choice__wrapper">
           <div class="program-choice__section program-choice__section--slim">
             <div class="program-choice__icon"></div>
-            <!--Картинка-иконка-->
+
             <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
           </div>
           <p class="program-choice__info">
@@ -84,7 +84,7 @@
         <div class="program-choice__wrapper">
           <div class="program-choice__section program-choice__section--pro">
             <div class="program-choice__icon"></div>
-            <!--Картинка-иконка-->
+
             <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
           </div>
           <p class="program-choice__info">
@@ -100,29 +100,21 @@
       <h2 class="works__head">Как это работает</h2>
       <ul class="works__list">
         <li class="works__item works__item--benefit">
-
-          <!--Картинка-иконка-->
           <p class="works__info">
             Функциональное питание содержит только полезные питательные вещества.
           </p>
         </li>
         <li class="works__item works__item--easy">
-
-          <!--Картинка-иконка-->
           <p class="works__info">
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
         </li>
         <li class="works__item works__item--econom">
-
-          <!--Картинка-иконка-->
           <p class="works__info">
             Замените один-два приема обычной еды на наше функциональное питание.
           </p>
         </li>
         <li class="works__item works__item--better">
-
-          <!--Картинка-иконка-->
           <p class="works__info works__info--last">
             Уже через месяц наслаждайтесь изменениями к лучшему <span class="works__info-pet">вашего питомца !</span>
           </p>
@@ -130,7 +122,7 @@
       </ul>
     </section>
     <section class="example">
-      <div class="example__wrapper container">
+      <div class="example__wrapper">
         <div class="example__live">
           <h2 class="example__title">Живой пример</h2>
           <article class="example__text">
@@ -164,26 +156,21 @@
 
             <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
-            <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232"
+            <img class="example__img" src="img/before-mobile@1x.png" width="310" height="232"
               srcset="img/before-mobile@2x.png 2x" alt="Жирный кот">
           </picture>
           <div class="example__indicator">
-
             <button class="example__cat example__cat--was" type="button">БЫЛО</button>
             <button class="example__point" type="button"></button>
-            <!--Тут будет индикатор-->
-
             <button class="example__cat example__cat--is" type="button">СТАЛО</button>
-
           </div>
         </div>
       </div>
     </section>
-
   </main>
   <footer class="footer">
-    <div class="footer__welcome container">
-      <section class="welcome">
+    <div class="footer__welcome">
+      <section class="welcome welcome__index">
         <p class="welcome__partnership">Приглашаем <br> к сотрудничеству <br> дилеров!</p>
         <p class="welcome__address">ул. Большая Конюшенная, д. 19/8
           <span class="welcome__address-spb">Санкт-Петербург</span>
