Подгоняем под ПП

--- a/source/form.html
+++ b/source/form.html
@@ -184,7 +184,7 @@
     </picture>
     <section class="footer__info">
       <div class="footer__container container">
-        <a class="footer__image" aria-label="CAT energy">
+        <a href="index.html" class="footer__image" aria-label="CAT energy">
           <svg width="130" height="50">
             <use xlink:href="#icon-cat-energy"></use>
           </svg>
