Работа над ошибками

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -87,7 +87,7 @@
               </tr>
             </table>
           </div>
-          <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
+          <a href="/order" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№2-->
         <li class="catalog__item">
@@ -129,7 +129,7 @@
               </tr>
             </table>
           </div>
-          <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
+          <a href="/order" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№3-->
         <li class="catalog__item">
@@ -170,7 +170,7 @@
               </tr>
             </table>
           </div>
-          <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
+          <a href="/order" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№4-->
         <li class="catalog__item">
@@ -210,7 +210,7 @@
               </tr>
             </table>
           </div>
-          <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
+          <a href="/order" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№5-->
         <li class="catalog__item">
@@ -254,7 +254,7 @@
               </tr>
             </table>
           </div>
-          <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
+          <a href="/order" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№6-->
         <li class="catalog__item">
@@ -297,7 +297,7 @@
               </tr>
             </table>
           </div>
-          <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
+          <a href="/order" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <!--№7-->
         <li class="catalog__item">
@@ -339,7 +339,7 @@
               </tr>
             </table>
           </div>
-          <a href="#" class="button catalog__button">ЗАКАЗАТЬ</a>
+          <a href="/order" class="button catalog__button">ЗАКАЗАТЬ</a>
         </li>
         <li class="catalog__item more-info">
 
@@ -365,7 +365,7 @@
                 <td class="add-article__item">200 р.</td>
               </tr>
             </table>
-            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+            <a href="/order" class="add-article__order button">ЗАКАЗАТЬ</a>
           </li>
 
           <li class="add-article">
@@ -376,7 +376,7 @@
                 <td class="add-article__item">50 р.</td>
               </tr>
             </table>
-            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+            <a href="/order" class="add-article__order button">ЗАКАЗАТЬ</a>
           </li>
 
           <li class="add-article">
@@ -387,7 +387,7 @@
                 <td class="add-article__item">100 р.</td>
               </tr>
             </table>
-            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+            <a href="/order" class="add-article__order button">ЗАКАЗАТЬ</a>
           </li>
 
           <li class="add-article">
@@ -398,7 +398,7 @@
                 <td class="add-article__item">300 р.</td>
               </tr>
             </table>
-            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+            <a href="/order" class="add-article__order button">ЗАКАЗАТЬ</a>
           </li>
         </ul>
       </section>
@@ -440,7 +440,7 @@
         srcset="img/bg-map-mobile@2x.png 2x" alt="«CAT ENERGY»">
     </picture>
     <section class="footer__info">
-      <div class="footer__container container">
+      <div class="footer__container">
         <a href="index.html" class="footer__image" aria-label="CAT energy">
           <svg width="130" height="50">
             <use xlink:href="#icon-cat-energy"></use>
@@ -473,7 +473,7 @@
           <p class="html-academy__p">
             HTML Academy
           </p>
-          <svg class="html-academy__icon" width="37" height="44">
+          <svg class="html-academy__icon" width="40" height="46">
             <use xlink:href="#icon-html"></use>
           </svg>
         </a>
