--- a/source/form.html
+++ b/source/form.html
@@ -129,7 +129,7 @@
       </div>
       <fieldset class="cat-addition">
 
-        <div class="cat-addition__wrapper container">
+        <div class="cat-addition__wrapper">
           <div class="cat-addition__item">
             <input type="checkbox" id="sugar" name="add-sugar" checked="" class="cat-addition__check visually-hidden">
             <label for="sugar" class="cat-addition__label program-form__data ">Сахарозаменитель</label>
@@ -183,7 +183,7 @@
         srcset="img/bg-map-mobile@2x.png 2x" alt="«CAT ENERGY»">
     </picture>
     <section class="footer__info">
-      <div class="footer__container container">
+      <div class="footer__container">
         <a href="index.html" class="footer__image" aria-label="CAT energy">
           <svg width="130" height="50">
             <use xlink:href="#icon-cat-energy"></use>
@@ -216,7 +216,7 @@
           <p class="html-academy__p">
             HTML Academy
           </p>
-          <svg class="html-academy__icon" width="37" height="44">
+          <svg class="html-academy__icon" width="40" height="46">
             <use xlink:href="#icon-html"></use>
           </svg>
         </a>
