--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
-          <a href="#catalog-1" class="program-choice__get">Каталог SLIM </a>
+          <a href="/catalog-1" class="program-choice__get">Каталог SLIM </a>
         </div>
       </li>
       <li class="program-choice__item">
@@ -91,7 +91,7 @@
             Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a href="#catalog-2" class="program-choice__get">Каталог PRO </a>
+          <a href="/catalog-2" class="program-choice__get">Каталог PRO </a>
         </div>
       </li>
     </ul>
@@ -196,7 +196,7 @@
         srcset="img/bg-map-mobile@2x.png 2x" alt="«CAT ENERGY»">
     </picture>
     <section class="footer__info">
-      <div class="footer__container container">
+      <div class="footer__container">
         <a class="footer__image" aria-label="CAT energy">
           <svg width="130" height="50">
             <use xlink:href="#icon-cat-energy"></use>
@@ -229,7 +229,7 @@
           <p class="html-academy__p">
             HTML Academy
           </p>
-          <svg class="html-academy__icon" width="37" height="44">
+          <svg class="html-academy__icon" width="40" height="46">
             <use xlink:href="#icon-html"></use>
           </svg>
         </a>
